# bitcoin_addresses

./: Cargo.toml  LICENSE  README.md  dfx.json
src/bitcoin_addresses_backend/: Cargo.toml  bitcoin_addresses_backend.did
src/bitcoin_addresses_backend/src/: lib.rs  schnorr_api.rs
