[package]
name = "bitcoin_addresses_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bitcoin = { version = "0.32.2", features = ["serde"] }
bitcoin_hashes = "0.12"
candid = "0.10"
ic-cdk = "0.14"
serde = "1.0.195"
